--- a/entorno_MORADO_RETO07.yml
+++ b/entorno_MORADO_RETO07.yml
@@ -1,83 +1,106 @@
-name: 22-23_R7_Morado
+name: entorno_MORADO_RETO07
 channels:
+  - plotly
+  - anaconda
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - _py-xgboost-mutex=2.0=cpu_0
+  - appdirs=1.4.4=pyhd3eb1b0_0
   - asttokens=2.0.5=pyhd3eb1b0_0
+  - atk-1.0=2.36.0=ha1a6a79_0
   - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.11.1=py39h06a4308_0
   - blas=1.0=mkl
   - bottleneck=1.3.5=py39h7deecbd_0
   - brotli=1.0.9=h5eee18b_7
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py39h27cfd23_1003
-  - ca-certificates=2023.01.10=h06a4308_0
-  - certifi=2022.12.7=py39h06a4308_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - cairo=1.16.0=h18b612c_1001
+  - catboost=1.1.1=py39hf3d152e_2
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py39h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py39h06a4308_0
+  - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.1.2=py39h06a4308_0
-  - contourpy=1.0.5=py39hdb19cb5_0
-  - cryptography=38.0.4=py39h9ce1e76_0
+  - cryptography=39.0.1=py39h9ce1e76_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - dbus=1.13.18=hb2f20db_0
+  - deap=1.3.3=py39h4661b88_1
   - debugpy=1.5.1=py39h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - entrypoints=0.4=py39h06a4308_0
-  - et_xmlfile=1.1.0=py39h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.4.9=h6a678d5_0
-  - fftw=3.3.9=h27cfd23_1
-  - fontconfig=2.14.1=h52c9d5c_1
-  - fonttools=4.25.0=pyhd3eb1b0_0
+  - expat=2.2.10=h9c3ff4c_0
+  - flask=2.2.2=py39h06a4308_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.1=hef1e5e3_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_1
+  - fribidi=1.0.10=h36c2ea0_0
+  - gdk-pixbuf=2.42.10=h5eee18b_0
+  - geographiclib=1.52=pyhd8ed1ab_0
+  - geopy=2.3.0=pyhd8ed1ab_0
+  - giflib=5.2.1=h5eee18b_3
   - glib=2.69.1=he621ea3_2
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
-  - icu=58.2=he6710b0_3
+  - gobject-introspection=1.72.0=py39hbb6d50b_2
+  - graphite2=1.3.14=h295c915_1
+  - graphviz=2.50.0=h3cd0ef9_0
+  - greenlet=2.0.2=py39h227be39_0
+  - gtk2=2.24.33=h73c1081_2
+  - gts=0.7.6=h08bb679_0
+  - harfbuzz=4.3.0=hd55b92a_0
+  - icu=58.2=hf484d3e_1000
   - idna=3.4=py39h06a4308_0
+  - importlib-metadata=4.11.3=py39h06a4308_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.19.2=py39hb070fc8_0
-  - ipython=8.8.0=py39h06a4308_0
+  - ipython=8.10.0=py39h06a4308_0
+  - ipython-sql=0.3.9=pyhd8ed1ab_1004
+  - ipython_genutils=0.2.0=py_1
+  - itsdangerous=2.0.1=pyhd3eb1b0_0
   - jedi=0.18.1=py39h06a4308_1
-  - jpeg=9e=h7f8727e_0
-  - jupyter_client=7.4.8=py39h06a4308_0
-  - jupyter_core=5.1.1=py39h06a4308_0
+  - jinja2=3.1.2=py39h06a4308_0
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - jpeg=9e=h5eee18b_1
+  - jupyter_client=7.4.9=py39h06a4308_0
+  - jupyter_core=5.2.0=py39h06a4308_0
   - kiwisolver=1.4.4=py39h6a678d5_0
-  - krb5=1.19.4=h568e23c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
   - libbrotlicommon=1.0.9=h5eee18b_7
   - libbrotlidec=1.0.9=h5eee18b_7
   - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang=10.0.1=default_hb85057a_2
-  - libdeflate=1.8=h7f8727e_5
-  - libedit=3.1.20221030=h5eee18b_0
-  - libevent=2.1.12=h8f2d780_0
+  - libdeflate=1.17=h5eee18b_0
   - libffi=3.4.2=h6a678d5_6
-  - libgcc-ng=11.2.0=h1234567_1
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgd=2.3.3=h695aa2c_1
   - libgfortran-ng=11.2.0=h00389a5_1
   - libgfortran5=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libllvm10=10.0.1=hbcb73fb_5
-  - libpng=1.6.37=hbc83047_0
-  - libpq=12.9=h16c4e8d_3
+  - libpng=1.6.39=h5eee18b_0
+  - librsvg=2.54.4=h36cc946_2
   - libsodium=1.0.18=h7b6447c_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.5.0=h6a678d5_1
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.2.4=h11a3e52_0
-  - libwebp-base=1.2.4=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=hfa300c1_0
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libtiff=4.5.0=h6a678d5_2
+  - libtool=2.4.6=h6a678d5_1009
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - libxcb=1.13=h7f98852_1004
+  - libxgboost=1.7.3=h6a678d5_0
   - libxml2=2.9.14=h74e7548_0
-  - libxslt=1.1.35=h4e12654_0
-  - lxml=4.9.1=py39h1edc446_0
+  - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_0
-  - matplotlib=3.6.2=py39h06a4308_0
-  - matplotlib-base=3.6.2=py39h945d387_0
+  - markupsafe=2.1.1=py39h7f8727e_0
+  - matplotlib-base=3.7.0=py39h417a72b_0
   - matplotlib-inline=0.1.6=py39h06a4308_0
   - missingno=0.4.2=pyhd3eb1b0_1
   - mkl=2021.4.0=h06a4308_640
@@ -87,64 +110,90 @@ dependencies:
   - munkres=1.1.4=py_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.6=py39h06a4308_0
-  - nspr=4.33=h295c915_0
-  - nss=3.74=h0370c37_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
   - numexpr=2.8.4=py39he184ba9_0
-  - numpy=1.23.5=py39h14f4228_0
   - numpy-base=1.23.5=py39h31eccc5_0
-  - openpyxl=3.0.10=py39h5eee18b_0
-  - openssl=1.1.1s=h7f8727e_0
+  - openssl=1.1.1t=h0b41bf4_0
   - packaging=22.0=py39h06a4308_0
-  - pandas=1.5.2=py39h417a72b_0
+  - pandas=1.5.3=py39h417a72b_0
+  - pango=1.50.7=h05da053_0
   - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.45=h295c915_0
+  - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.3.0=py39h6a678d5_2
-  - pip=22.3.1=py39h06a4308_0
+  - pip=23.0.1=py39h06a4308_0
+  - pixman=0.38.0=h516909a_1003
   - platformdirs=2.5.2=py39h06a4308_0
-  - plotly=5.9.0=py39h06a4308_0
-  - ply=3.11=py39h06a4308_0
+  - plotly=5.13.1=py_0
+  - pooch=1.4.0=pyhd3eb1b0_0
+  - prettytable=3.6.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.36=py39h06a4308_0
   - psutil=5.9.0=py39h5eee18b_0
+  - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - py-xgboost=1.7.3=py39h06a4308_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyopenssl=23.0.0=py39h06a4308_0
   - pyparsing=3.0.9=py39h06a4308_0
-  - pyqt=5.15.7=py39h6a678d5_1
-  - pyqt5-sip=12.11.0=py39h6a678d5_1
   - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.16=h7a1cb2a_0
+  - python=3.9.16=h7a1cb2a_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-graphviz=0.20.1=pyh22cad53_0
+  - python_abi=3.9=2_cp39
   - pytz=2022.7=py39h06a4308_0
   - pyzmq=23.2.0=py39h6a678d5_0
-  - qt-main=5.15.2=h327a75a_7
-  - qt-webengine=5.15.9=hd2b0992_4
-  - qtwebkit=5.212=h4eab89a_4
   - readline=8.2=h5eee18b_0
   - requests=2.28.1=py39h06a4308_0
-  - scipy=1.9.3=py39h14f4228_0
+  - scipy=1.10.0=py39h14f4228_1
   - seaborn=0.12.2=py39h06a4308_0
   - setuptools=65.6.3=py39h06a4308_0
-  - sip=6.6.2=py39h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
-  - soupsieve=2.3.2.post1=py39h06a4308_0
+  - sqlalchemy=2.0.5.post1=py39h72bdee0_0
   - sqlite=3.40.1=h5082296_0
+  - sqlparse=0.4.3=pyhd8ed1ab_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tabulate=0.8.10=py39h06a4308_0
-  - tenacity=8.0.1=py39h06a4308_1
+  - stopit=1.1.2=py_0
+  - tenacity=8.2.2=pyhd8ed1ab_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=h1ccaba5_0
-  - toml=0.10.2=pyhd3eb1b0_0
   - tornado=6.2=py39h5eee18b_0
+  - tpot=0.11.7=pyhd8ed1ab_1
+  - tqdm=4.65.0=pyhd8ed1ab_1
   - traitlets=5.7.1=py39h06a4308_0
+  - typing-extensions=4.5.0=hd8ed1ab_0
+  - typing_extensions=4.5.0=pyha770c72_0
   - tzdata=2022g=h04d1e81_0
+  - update_checker=0.18.0=pyh9f0ad1d_0
   - urllib3=1.26.14=py39h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.37.1=pyhd3eb1b0_0
+  - werkzeug=2.2.2=py39h06a4308_0
+  - wheel=0.38.4=py39h06a4308_0
+  - xgboost=1.7.3=py39h06a4308_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.6.12=h36c2ea0_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.10=h5eee18b_1
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
-prefix: /home/bdata2/anaconda3/envs/22-23_R7_Morado
+  - pip:
+      - contourpy==1.0.7
+      - fonttools==4.39.0
+      - importlib-resources==5.12.0
+      - matplotlib==3.7.1
+      - numpy==1.24.2
+      - pillow==9.4.0
+      - scikit-learn==1.2.2
+      - zipp==3.15.0
+prefix: /home/bdata2/anaconda3/envs/entorno_MORADO_RETO07
